# generarxml

./: .gitignore  AUTHORS  Biblia.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  chris.conf  config.dtd  configure  configure.ac  encoding.c  encoding.h  main.c  readconfig.c  readfile.h  string.c
headers/: main.h  readconfig.h
misc/: carlos.conf  config.dtd  diego.conf  enzo.conf  erwin.conf  generarxml.dtd  martin.conf  pablo.conf  paula.conf
src/: Makefile  Makefile.am  Makefile.in  encoding.c  encoding.h  getline.c  getline.h  main.c  main.h  makexml.c  makexml.h  oldmakefile  readconfig.c  readconfig.h  readfile.c  readfile.h
src/.deps/: __top_builddir__bin_generarxml-encoding.Po  __top_builddir__bin_generarxml-main.Po  __top_builddir__bin_generarxml-readconfig.Po  __top_builddir__bin_generarxml-readfile.Po  __top_builddir__bin_generarxml-string.Po  __top_builddir__out_generarxml-encoding.Po  __top_builddir__out_generarxml-main.Po  __top_builddir__out_generarxml-readconfig.Po  __top_builddir__out_generarxml-readfile.Po  __top_builddir__out_generarxml-string.Po  generarxml-encoding.Po  generarxml-main.Po  generarxml-readconfig.Po  generarxml-readfile.Po  generarxml-string.Po
